# startactive

./: .gitignore  .vim-template:h  CMakeLists.txt  Initialization.cpp  Initialization.h  ModuleStarter.cpp  ModuleStarter.h  Modules.cpp  Modules.h  ProcessStarter.cpp  ProcessStarter.h  SignalListener.cpp  SignalListener.h  StartActive.cpp  StartActive.h  StartPlasma.cpp  StartPlasma.h  config-startactive.h.cmake  config-startplasma.h.cmake  env.conf.cmake  main.cpp  org.kde.StartActive.xml  org.kde.StartPlasma.xml  readme.txt  setup-kde-skel  startactive  startplasma  vim-extrarc
dump/: env.startkde
modules/: CMakeLists.txt  active.module  activitymanager.module  contour.module  desktop-x11.module  desktop.module  kactivitymanagerd.module  kde-default-skel.module  kdeinit.module  kdeinit.module.in  krandrstartup.module  ksmserver.module  ksmserver_x11.module  kstartupconfig.module  kwin.module  lnusertemp-cache.module  lnusertemp-cache.module.in  lnusertemp-socket.module  lnusertemp-socket.module.in  lnusertemp-tmp.module  lnusertemp-tmp.module.in  lnusertemp.module  nepomuk.module  plasma-desktop.module  plasma-device.module  plasma-keyboard.module  plasmashell.module  prestart.module  setup-kde-skel.module  test-bangarang.module  test-kate.module
modules/old/: kdeinit.module.in  ksmserver.module  lnusertemp-socket.module.in  nepomuk.module
splash/: SplashWindow.cpp  SplashWindow.h  SystemInfo.h
systemd/: CMakeLists.txt  active.target  activitymanager.service  activitymanager.service.in  contour.service  contour.service.in  kdeinit.service.in  ksmserver.service  ksmserver.service.in  lnusertemp-cache.service.in  lnusertemp-socket.service.in  lnusertemp-tmp.service.in  nepomuk.service  nepomuk.service.in  plasma-device.service  plasma-device.service.in  setup-kde-skel.service  setup-kde-skel.service.in  startactive.service  startactive.service.in
